# linrax

./: README.md  pyproject.toml
linrax/: optim.py
tests/: test_scipy_compare.py
