[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linrax"
description = "A JAX-compatible, simplex method-based linear program solver"
readme = "README.md"


version = "2025.01.30"
requires-python = ">=3.11"
dependencies = [
	"jax ~= 0.4.35",
]

[project.optional-dependencies]
cuda = ["jax[cuda12_pip] ~= 0.4.35"]

[project.urls]
Repository = "https://github.com/gtfactslab/linrax.git"

[tool.hatch.build.targets.wheel]
packages = ["linrax"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
	"scipy ~= 1.14.1",
	"matplotlib ~= 3.9.2",
	"pytest~=8.1",
]
